updated simple rag example

--- a/nbs/blog/posts/simple_rag_example/2024-07-31-simple-rag-example.ipynb
+++ b/nbs/blog/posts/simple_rag_example/2024-07-31-simple-rag-example.ipynb
@@ -7,10 +7,17 @@
    "source": [
     "# RAG - Retrival Augumented Generation \n",
     "## what the hell is it ?\n",
-    "> * RAG is an advanced form of information retrieval (IR) mechanism.\n",
-    "> * Your task, is to retrieve relevant information from a dataset for your query.\n",
-    "> * Here, the query and an array of documents (documents) is converted into embeddings and then pooled into single vector , post that using cosine similarity search we are retrieving the top most n documents\n",
-    "    \n"
+    " * RAG is an advanced form of information retrieval (IR) mechanism.\n",
+    " * Information retrieval, is the process of retrieving relevant information from a dataset for your query.\n",
+    "\n",
+    "## How basic RAG works in a nutshell\n",
+    "* Input: Query and Array of documents (dataset)\n",
+    "* Output: Top N relevant documents\n",
+    "* RAG uses Bi-Encoder encoding and cosine similarity search to retrieve top n documents\n",
+    "* first, query is converted into embeddings (floating point representation) i.e) array of vectors, and then pooled together into single vector say Q\n",
+    "* second, input documents array, here each document in the array is converted into embeddings (floating point representation) i.e) array of vectors, and then pooled together into single vector say Docs \n",
+    "* then, cosine similarity search is taken between the Q and each document vector in Docs say cosine_similarity_score_list, and it is sorted in descending manner\n",
+    "* Top n docs is returned from cosine_similarity_score_list as relevant documents\n"
    ]
   },
   {
@@ -20,25 +27,21 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bdbad10d-381b-4e2c-94c6-5cd4864536ab",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "python3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.12.4"
   }
  },
  "nbformat": 4,
