updated rag example outline

--- a/nbs/blog/posts/simple_rag_example/2024-07-31-simple-rag-example.ipynb
+++ b/nbs/blog/posts/simple_rag_example/2024-07-31-simple-rag-example.ipynb
@@ -2,10 +2,17 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "76e5d30c-d581-4d37-a89d-f777ce67f92b",
+   "id": "25cb452f-4ebe-4f31-860a-8568473c4730",
    "metadata": {},
    "source": [
-    "# RAG - Retrival Augumented Generation \n",
+    "# RAG - Retrival Augumented Generation "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "58fef616-206c-46c9-a4db-fd84f0573330",
+   "metadata": {},
+   "source": [
     "## what the hell is it ?\n",
     " * RAG is an advanced form of information retrieval (IR) mechanism.\n",
     " * Information retrieval, is the process of retrieving relevant information from a dataset for your query.\n",
@@ -17,7 +24,7 @@
     "* first, query is converted into embeddings (floating point representation) i.e) array of vectors, and then pooled together into single vector say Q\n",
     "* second, input documents array, here each document in the array is converted into embeddings (floating point representation) i.e) array of vectors, and then pooled together into single vector say Docs \n",
     "* then, cosine similarity search is taken between the Q and each document vector in Docs say cosine_similarity_score_list, and it is sorted in descending manner\n",
-    "* Top n docs is returned from cosine_similarity_score_list as relevant documents\n"
+    "* Top n docs is returned from cosine_similarity_score_list as relevant documents"
    ]
   },
   {
@@ -26,7 +33,9 @@
    "id": "baaa12a2-ebd3-4401-836d-0c8298c44184",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import time"
+   ]
   },
   {
    "cell_type": "code",
