added chat with research paper rag example

--- a/nbs/blog/posts/simple_rag_example/2024-07-31-simple-rag-example.ipynb
+++ b/nbs/blog/posts/simple_rag_example/2024-07-31-simple-rag-example.ipynb
@@ -1,11 +1,26 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "25cb452f-4ebe-4f31-860a-8568473c4730",
+   "cell_type": "raw",
+   "id": "de870fac-5c67-4726-9c5c-24703219152b",
    "metadata": {},
    "source": [
-    "# RAG - Retrival Augumented Generation "
+    "---\n",
+    "title: RAG - Basic RAG using llama3, langchain and chromadb\n",
+    "author: fastdaima\n",
+    "date: '2024-07-31'\n",
+    "description: A primer about RAG's\n",
+    "\n",
+    "categories:\n",
+    "- embedding\n",
+    "- RAG\n",
+    "\n",
+    "toc: true\n",
+    "hide: false\n",
+    "search: true\n",
+    "\n",
+    "---\n",
+    "\n"
    ]
   },
   {
@@ -28,19 +43,23 @@
    ]
   },
   {
+   "cell_type": "raw",
+   "id": "ca20db58-81ee-40e3-9e12-00527f4b5883",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "baaa12a2-ebd3-4401-836d-0c8298c44184",
+   "execution_count": 1,
+   "id": "bdbad10d-381b-4e2c-94c6-5cd4864536ab",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "import time"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bdbad10d-381b-4e2c-94c6-5cd4864536ab",
+   "id": "47fdb1e7-6bae-4750-b7f7-2a43481ef10a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -48,9 +67,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "python3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
