renamed blog post

--- a/nbs/blog/posts/rag/how-to-use-azureopenai-embeddings-in-lancedb.ipynb
+++ b/nbs/blog/posts/rag/how-to-use-azureopenai-embeddings-in-lancedb.ipynb
@@ -75,7 +75,7 @@
     "from functools import cached_property\n",
     "from typing import TYPE_CHECKING, List, Optional, Union\n",
     "import logging\n",
-    "\n",
+    "import os \n",
     "from lancedb.util import attempt_import_or_raise\n",
     "from lancedb.embeddings.base import TextEmbeddingFunction\n",
     "from lancedb.embeddings.registry import register, EmbeddingFunctionRegistry\n",
@@ -207,11 +207,11 @@
    "source": [
     "# REQUIRED ENV VARIABLES, ALWAYS LOAD IT FROM .env\n",
     "\n",
-    "AZURE_EMBEDDING_MODEL='text-embedding-3-large'\n",
-    "AZURE_EMBEDDING_ENDPOINT='https://azure-openai-appscribe.openai.azure.com'\n",
-    "AZURE_EMBEDDING_DEPLOYMENT='Appscribe-embeddings'\n",
-    "AZURE_EMBEDDING_API_KEY='f021ac05a1e6400994c306ea4b69d07a'\n",
-    "AZURE_API_VERSION='2024-02-15-preview'"
+    "AZURE_EMBEDDING_MODEL= os.environ['AZURE_EMBEDDING_MODEL']\n",
+    "AZURE_EMBEDDING_ENDPOINT=os.environ['AZURE_EMBEDDING_ENDPOINT']\n",
+    "AZURE_EMBEDDING_DEPLOYMENT=os.environ['AZURE_EMBEDDING_DEPLOYMENT']\n",
+    "AZURE_EMBEDDING_API_KEY=os.environ['AZURE_EMBEDDING_API_KEY']\n",
+    "AZURE_API_VERSION=os.environ['AZURE_API_VERSION']"
    ]
   },
   {
